// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SelectedItem default snapshot 1`] = `
<div
  className="selected_item"
  style={
    Object {
      "height": 40,
    }
  }
>
  <ItemLabel
    label=""
  />
  <WithStyles(ForwardRef(IconButton))>
    <MdClose />
  </WithStyles(ForwardRef(IconButton))>
</div>
`;

exports[`SelectedItem snapshot with disabled item 1`] = `
<div
  className="selected_item"
  style={
    Object {
      "height": 40,
    }
  }
>
  <ItemLabel
    label="item 1"
  />
  <WithStyles(ForwardRef(IconButton))>
    <MdClose />
  </WithStyles(ForwardRef(IconButton))>
</div>
`;

exports[`SelectedItem snapshot with group item 1`] = `
<div
  className="with_grouping"
  style={
    Object {
      "height": 40,
    }
  }
>
  <ItemLabel
    label="Hi"
  />
</div>
`;

exports[`SelectedItem snapshot with height 1`] = `
<div
  className="selected_item"
  style={
    Object {
      "height": 20,
    }
  }
>
  <ItemLabel
    label=""
  />
  <WithStyles(ForwardRef(IconButton))>
    <MdClose />
  </WithStyles(ForwardRef(IconButton))>
</div>
`;

exports[`SelectedItem snapshot with valid item 1`] = `
<div
  className="selected_item"
  style={
    Object {
      "height": 40,
    }
  }
>
  <ItemLabel
    label="Hi"
  />
  <WithStyles(ForwardRef(IconButton))>
    <MdClose />
  </WithStyles(ForwardRef(IconButton))>
</div>
`;
